# novomatic-cpp-internship-2026

./: README.md
BlueprintAutoLayout/: CMakeLists.txt  README.md  blueprint.json  main.cpp
BlueprintAutoLayout/include/: Graph.hpp  JsonReader.hpp  Node.hpp  Visualizer.hpp
BlueprintAutoLayout/src/: Graph.cpp  JsonReader.cpp  Visualizer.cpp
LogAnalyzer/: CMakeLists.txt  README.md  logs.txt  logs_test.txt  main.cpp
LogAnalyzer/include/: FileParser.hpp  Lexer.hpp  LogEntry.hpp  Parser.hpp  Query.hpp  QueryParser.hpp  Token.hpp
LogAnalyzer/src/: FileParser.cpp  Lexer.cpp  LogEntry.cpp  Parser.cpp  Query.cpp  QueryParser.cpp
LogAnalyzer/test/: test.cpp
TicketMachine/: CMakeLists.txt  README.md  main.cpp
TicketMachine/include/: CashRegister.hpp  Coin.hpp  Reservation.hpp  Ticket.hpp  TicketMachineClient.hpp  TicketMachineServer.hpp  UI.hpp
TicketMachine/src/: CashRegister.cpp  Coin.cpp  TicketMachineClient.cpp  TicketMachineServer.cpp  UI.cpp
TicketMachine/test/: test.cpp
